# kestrel-eye

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
examples/kestrel-sovereign/: eye.toml
kestrel_eye/: __init__.py  cli.py  config.py  models.py  report.py  reporter.py  reviewer.py  runner.py
kestrel_eye/providers/: __init__.py  anthropic.py  base.py  claude_sdk.py  openai.py
tests/fixtures/: sample_eye.toml
tests/integration/: test_live_review.py
tests/unit/: test_config.py  test_models.py  test_report.py  test_reporter.py  test_reviewer.py  test_runner.py
